--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ li {
   border-bottom: 1px solid #ccc;
   width: 200px;
   display: block;
-  margin-bottom: 20px;
+  margin: 10px auto;
 }
 
 div {
@@ -29,9 +29,10 @@ div {
 
 ul {
   width: 200px;
+  padding: 0;
   margin: auto;
 }
 
 button {
-  margin-bottom: 10px;
+  margin: 10px auto;
 }
